--- a/scraper_go/docker-compose.yml
+++ b/scraper_go/docker-compose.yml
@@ -16,6 +16,18 @@ services:
       - WORKER_POOL_SIZE=${WORKER_POOL_SIZE:-10}
       - LOG_LEVEL=${LOG_LEVEL:-info}
       - LOG_FORMAT=${LOG_FORMAT:-json}
+      
+      # Output format configuration
+      - DEFAULT_OUTPUT_FORMAT=${DEFAULT_OUTPUT_FORMAT:-json}
+      
+      # Anti-bot and CAPTCHA configuration
+      - DEFAULT_STEALTH_MODE=${DEFAULT_STEALTH_MODE:-true}
+      - DEFAULT_CAPTCHA_SOLVER=${DEFAULT_CAPTCHA_SOLVER:-}
+      - DEFAULT_CAPTCHA_API_KEY=${DEFAULT_CAPTCHA_API_KEY:-}
+      - DEFAULT_MIN_DELAY=${DEFAULT_MIN_DELAY:-1}
+      - DEFAULT_MAX_DELAY=${DEFAULT_MAX_DELAY:-3}
+      - DEFAULT_VIEWPORT_WIDTH=${DEFAULT_VIEWPORT_WIDTH:-1920}
+      - DEFAULT_VIEWPORT_HEIGHT=${DEFAULT_VIEWPORT_HEIGHT:-1080}
       - USE_PROXY_ROTATION=${USE_PROXY_ROTATION:-false}
       - MAX_RETRIES=${MAX_RETRIES:-3}
       - RETRY_DELAY=${RETRY_DELAY:-5s}
