--- a/scraper_go/env.example
+++ b/scraper_go/env.example
@@ -21,6 +21,18 @@ WORKER_POOL_SIZE=10
 LOG_LEVEL=info
 LOG_FORMAT=json
 
+# Output Format Configuration
+DEFAULT_OUTPUT_FORMAT=json
+
+# Anti-bot and CAPTCHA Configuration
+DEFAULT_STEALTH_MODE=true
+DEFAULT_CAPTCHA_SOLVER=
+DEFAULT_CAPTCHA_API_KEY=
+DEFAULT_MIN_DELAY=1
+DEFAULT_MAX_DELAY=3
+DEFAULT_VIEWPORT_WIDTH=1920
+DEFAULT_VIEWPORT_HEIGHT=1080
+
 # Proxy Configuration (optional)
 PROXY_LIST=proxy1:port,proxy2:port
 USE_PROXY_ROTATION=false
