--- a/scraper_landing/package.json
+++ b/scraper_landing/package.json
@@ -14,17 +14,20 @@
     "@tailwindcss/vite": "^4.1.13",
     "@types/node": "^24.4.0",
     "@types/react-router-dom": "^5.3.3",
+    "@types/three": "^0.180.0",
     "autoprefixer": "^10.4.21",
     "clsx": "^2.1.1",
     "i18next": "^25.5.2",
     "i18next-browser-languagedetector": "^8.2.0",
+    "next-themes": "^0.4.6",
     "postcss": "^8.5.6",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-i18next": "^15.7.3",
     "react-router-dom": "^7.9.1",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss": "^4.1.13"
+    "tailwindcss": "^4.1.13",
+    "three": "^0.180.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
