--- a/scraper_node/env.example
+++ b/scraper_node/env.example
@@ -42,6 +42,8 @@ CLERK_PUBLISHABLE_KEY=pk_test_...
 CLERK_SECRET_KEY=sk_test_...
 
 # Encryption (for credentials)
+# Generate a 64-character hex key with: node -e "console.log(require('crypto').randomBytes(32).toString('hex'))"
+# Or use: openssl rand -hex 32
 ENCRYPTION_KEY=your_64_character_hex_encryption_key_here
 
 # Stripe Configuration
@@ -75,3 +77,11 @@ S3_BUCKET=scraper-results-bucket
 # Development Configuration
 STAGE=dev
 REGION=us-east-1
+
+# Bright Data Browser API Configuration (optional)
+# Option 1: Provide full WebSocket endpoint
+# BRIGHT_DATA_BROWSER_WS_ENDPOINT=wss://brd-customer-{customer_id}-zone-{zone}:{password}@brd.superproxy.io:22225
+# Option 2: Provide separate credentials (will be combined automatically)
+# BRIGHT_DATA_CUSTOMER_ID=your_customer_id
+# BRIGHT_DATA_ZONE=your_zone_name
+# BRIGHT_DATA_PASSWORD=your_password
